[package]
name = "noob"
version = "1.1.0"
authors = ["Colin Reeder <vpzomtrrfrt@gmail.com>"]
description = "A WIP futures-based Discord bot library"
license = "MPL-2.0"
keywords = ["tokio", "discord", "futures"]
repository = "https://github.com/vpzomtrrfrt/noob"

[dependencies]
futures = "0.1.21"
hyper = "0.12.5"
hyper-tls = "0.3.0"
try_future = "0.1.2"
quick-error = "1.2.2"
serde_derive = "1.0.69"
serde_json = "1.0.22"
serde = "1.0.69"
tokio = "0.1.7"
tokio-tungstenite = "0.6.0"
url = "1.7.1"

[dev-dependencies]
tokio-core = "0.1.17"
