[package]
name = "noob"
version = "2.0.0-alpha.2"
authors = ["Colin Reeder <vpzomtrrfrt@gmail.com>"]
description = "A WIP futures-based Discord bot library"
license = "MPL-2.0"
keywords = ["tokio", "discord", "futures"]
repository = "https://github.com/vpzomtrrfrt/noob"
edition = "2018"

[dependencies]
form_urlencoded = "1.0.1"
futures = "0.3.13"
hyper = { version = "0.14.4", features = ["client", "http1"] }
hyper-tls = "0.5.0"
percent-encoding = "2.1.0"
serde = "1.0.124"
serde_derive = "1.0.124"
serde_json = "1.0.64"
tokio = "1.4.0"
tokio-tungstenite = { version = "0.14.0", features = ["native-tls"] }
url = "2.2.1"

[dev-dependencies]
tokio = { version = "1.4.0", features = ["macros", "rt-multi-thread"] }
